--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "buffer": "^6.0.3",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "cashscript": "^0.7.1",
     "classnames": "^2.3.1",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.5.1",
